# bangla_llm

./: .gitignore  README.md  install.py  pyproject.toml  requirements.txt  setup.py
bangla_llm/: llm.py  model.py  nlu.py
