[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bangla_llm"
version = "0.1.0"
description = "Bangla LLM Evaluation Framework"
authors = [{ name="S M Nahid Hasan", email="smhasan.ruet.ece17@gmail.com" }]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0"
]
